generated/JSSParser.py
# Generated from grammar/JSSParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class JSSParser ( Parser ):

    grammarFileName = "JSSParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'let'", "'const'", "'function'", "'void'", 
                     "'class'", "'constructor'", "'this'", "'new'", "'if'", 
                     "'else'", "'while'", "'for'", "'break'", "'return'", 
                     "'true'", "'false'", "'null'", "'input'", "'console.log'", 
                     "'int'", "'real'", "'str'", "'bool'", "'**='", "'&&='", 
                     "'||='", "'+='", "'-='", "'*='", "'/='", "'%='", "'=='", 
                     "'!='", "'>='", "'<='", "'&&'", "'||'", "'++'", "'--'", 
                     "'**'", "'='", "'>'", "'<'", "'!'", "'+'", "'-'", "'*'", 
                     "'/'", "'%'", "'('", "')'", "'{'", "'}'", "'['", "']'", 
                     "';'", "','", "'.'" ]

    symbolicNames = [ "<INVALID>", "LET", "CONST", "FUNCTION", "VOID", "CLASS", 
                      "CONSTRUCTOR", "THIS", "NEW", "IF", "ELSE", "WHILE", 
                      "FOR", "BREAK", "RETURN", "TRUE", "FALSE", "NULL", 
                      "INPUT", "CONSOLE_LOG", "INT_TYPE", "REAL_TYPE", "STR_TYPE", 
                      "BOOL_TYPE", "POW_ASSIGN", "AND_ASSIGN", "OR_ASSIGN", 
                      "PLUS_ASSIGN", "MINUS_ASSIGN", "MULT_ASSIGN", "DIV_ASSIGN", 
                      "MOD_ASSIGN", "EQ_EQ", "NEQ", "GE", "LE", "AND", "OR", 
                      "INC", "DEC", "POW", "ASSIGN", "GT", "LT", "NOT", 
                      "PLUS", "MINUS", "MULT", "DIV", "MOD", "LPAREN", "RPAREN", 
                      "LBRACE", "RBRACE", "LBRACK", "RBRACK", "SEMI", "COMMA", 
                      "DOT", "REAL_LITERAL", "INT_LITERAL", "STRING_LITERAL", 
                      "ID", "LINE_COMMENT", "WS" ]

    RULE_program = 0
    RULE_topLevelDeclaration = 1
    RULE_variableDeclaration = 2
    RULE_variableModifier = 3
    RULE_variableDeclarator = 4
    RULE_initializer = 5
    RULE_arrayLiteral = 6
    RULE_type = 7
    RULE_baseType = 8
    RULE_primitiveType = 9
    RULE_arraySuffix = 10
    RULE_returnType = 11
    RULE_classDeclaration = 12
    RULE_classMember = 13
    RULE_fieldDeclaration = 14
    RULE_constructorDeclaration = 15
    RULE_methodDeclaration = 16
    RULE_functionDeclaration = 17
    RULE_parameterList = 18
    RULE_parameter = 19
    RULE_block = 20
    RULE_statement = 21
    RULE_ifStatement = 22
    RULE_elseIfBlock = 23
    RULE_elseBlock = 24
    RULE_whileStatement = 25
    RULE_forStatement = 26
    RULE_forInit = 27
    RULE_breakStatement = 28
    RULE_returnStatement = 29
    RULE_inputStatement = 30
    RULE_inputArgumentList = 31
    RULE_inputArgument = 32
    RULE_consoleLogStatement = 33
    RULE_expression = 34
    RULE_assignmentExpression = 35
    RULE_assignmentOperator = 36
    RULE_logicalOrExpression = 37
    RULE_logicalAndExpression = 38
    RULE_equalityExpression = 39
    RULE_relationalExpression = 40
    RULE_additiveExpression = 41
    RULE_multiplicativeExpression = 42
    RULE_powerExpression = 43
    RULE_unaryExpression = 44
    RULE_postfixExpression = 45
    RULE_postfixSuffix = 46
    RULE_primaryExpression = 47
    RULE_newExpression = 48
    RULE_castExpression = 49
    RULE_argumentList = 50
    RULE_literal = 51

    ruleNames =  [ "program", "topLevelDeclaration", "variableDeclaration", 
                   "variableModifier", "variableDeclarator", "initializer", 
                   "arrayLiteral", "type", "baseType", "primitiveType", 
                   "arraySuffix", "returnType", "classDeclaration", "classMember", 
                   "fieldDeclaration", "constructorDeclaration", "methodDeclaration", 
                   "functionDeclaration", "parameterList", "parameter", 
                   "block", "statement", "ifStatement", "elseIfBlock", "elseBlock", 
                   "whileStatement", "forStatement", "forInit", "breakStatement", 
                   "returnStatement", "inputStatement", "inputArgumentList", 
                   "inputArgument", "consoleLogStatement", "expression", 
                   "assignmentExpression", "assignmentOperator", "logicalOrExpression", 
                   "logicalAndExpression", "equalityExpression", "relationalExpression", 
                   "additiveExpression", "multiplicativeExpression", "powerExpression", 
                   "unaryExpression", "postfixExpression", "postfixSuffix", 
                   "primaryExpression", "newExpression", "castExpression", 
                   "argumentList", "literal" ]

    EOF = Token.EOF
    LET=1
    CONST=2
    FUNCTION=3
    VOID=4
    CLASS=5
    CONSTRUCTOR=6
    THIS=7
    NEW=8
    IF=9
    ELSE=10
    WHILE=11
    FOR=12
    BREAK=13
    RETURN=14
    TRUE=15
    FALSE=16
    NULL=17
    INPUT=18
    CONSOLE_LOG=19
    INT_TYPE=20
    REAL_TYPE=21
    STR_TYPE=22
    BOOL_TYPE=23
    POW_ASSIGN=24
    AND_ASSIGN=25
    OR_ASSIGN=26
    PLUS_ASSIGN=27
    MINUS_ASSIGN=28
    MULT_ASSIGN=29
    DIV_ASSIGN=30
    MOD_ASSIGN=31
    EQ_EQ=32
    NEQ=33
    GE=34
    LE=35
    AND=36
    OR=37
    INC=38
    DEC=39
    POW=40
    ASSIGN=41
    GT=42
    LT=43
    NOT=44
    PLUS=45
    MINUS=46
    MULT=47
    DIV=48
    MOD=49
    LPAREN=50
    RPAREN=51
    LBRACE=52
    RBRACE=53
    LBRACK=54
    RBRACK=55
    SEMI=56
    COMMA=57
    DOT=58
    REAL_LITERAL=59
    INT_LITERAL=60
    STRING_LITERAL=61
    ID=62
    LINE_COMMENT=63
    WS=64

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(JSSParser.EOF, 0)

        def topLevelDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JSSParser.TopLevelDeclarationContext)
            else:
                return self.getTypedRuleContext(JSSParser.TopLevelDeclarationContext,i)


        def getRuleIndex(self):
            return JSSParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = JSSParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 8724722348076301230) != 0):
                self.state = 104
                self.topLevelDeclaration()
                self.state = 109
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 110
            self.match(JSSParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TopLevelDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def classDeclaration(self):
            return self.getTypedRuleContext(JSSParser.ClassDeclarationContext,0)


        def functionDeclaration(self):
            return self.getTypedRuleContext(JSSParser.FunctionDeclarationContext,0)


        def statement(self):
            return self.getTypedRuleContext(JSSParser.StatementContext,0)


        def getRuleIndex(self):
            return JSSParser.RULE_topLevelDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTopLevelDeclaration" ):
                listener.enterTopLevelDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTopLevelDeclaration" ):
                listener.exitTopLevelDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTopLevelDeclaration" ):
                return visitor.visitTopLevelDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def topLevelDeclaration(self):

        localctx = JSSParser.TopLevelDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_topLevelDeclaration)
        try:
            self.state = 115
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [5]:
                self.enterOuterAlt(localctx, 1)
                self.state = 112
                self.classDeclaration()
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 2)
                self.state = 113
                self.functionDeclaration()
                pass
            elif token in [1, 2, 7, 8, 9, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 38, 39, 44, 45, 46, 50, 52, 56, 59, 60, 61, 62]:
                self.enterOuterAlt(localctx, 3)
                self.state = 114
                self.statement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variableModifier(self):
            return self.getTypedRuleContext(JSSParser.VariableModifierContext,0)


        def type_(self):
            return self.getTypedRuleContext(JSSParser.TypeContext,0)


        def variableDeclarator(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JSSParser.VariableDeclaratorContext)
            else:
                return self.getTypedRuleContext(JSSParser.VariableDeclaratorContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(JSSParser.COMMA)
            else:
                return self.getToken(JSSParser.COMMA, i)

        def getRuleIndex(self):
            return JSSParser.RULE_variableDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableDeclaration" ):
                listener.enterVariableDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableDeclaration" ):
                listener.exitVariableDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariableDeclaration" ):
                return visitor.visitVariableDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def variableDeclaration(self):

        localctx = JSSParser.VariableDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_variableDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.variableModifier()
            self.state = 118
            self.type_()
            self.state = 119
            self.variableDeclarator()
            self.state = 124
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==57:
                self.state = 120
                self.match(JSSParser.COMMA)
                self.state = 121
                self.variableDeclarator()
                self.state = 126
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableModifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LET(self):
            return self.getToken(JSSParser.LET, 0)

        def CONST(self):
            return self.getToken(JSSParser.CONST, 0)

        def getRuleIndex(self):
            return JSSParser.RULE_variableModifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableModifier" ):
                listener.enterVariableModifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableModifier" ):
                listener.exitVariableModifier(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariableModifier" ):
                return visitor.visitVariableModifier(self)
            else:
                return visitor.visitChildren(self)




    def variableModifier(self):

        localctx = JSSParser.VariableModifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_variableModifier)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            _la = self._input.LA(1)
            if not(_la==1 or _la==2):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableDeclaratorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(JSSParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(JSSParser.ASSIGN, 0)

        def initializer(self):
            return self.getTypedRuleContext(JSSParser.InitializerContext,0)


        def getRuleIndex(self):
            return JSSParser.RULE_variableDeclarator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableDeclarator" ):
                listener.enterVariableDeclarator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableDeclarator" ):
                listener.exitVariableDeclarator(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariableDeclarator" ):
                return visitor.visitVariableDeclarator(self)
            else:
                return visitor.visitChildren(self)




    def variableDeclarator(self):

        localctx = JSSParser.VariableDeclaratorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_variableDeclarator)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(JSSParser.ID)
            self.state = 132
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==41:
                self.state = 130
                self.match(JSSParser.ASSIGN)
                self.state = 131
                self.initializer()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InitializerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(JSSParser.ExpressionContext,0)


        def arrayLiteral(self):
            return self.getTypedRuleContext(JSSParser.ArrayLiteralContext,0)


        def getRuleIndex(self):
            return JSSParser.RULE_initializer

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInitializer" ):
                listener.enterInitializer(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInitializer" ):
                listener.exitInitializer(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInitializer" ):
                return visitor.visitInitializer(self)
            else:
                return visitor.visitChildren(self)




    def initializer(self):

        localctx = JSSParser.InitializerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_initializer)
        try:
            self.state = 136
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [7, 8, 15, 16, 17, 20, 21, 22, 23, 38, 39, 44, 45, 46, 50, 59, 60, 61, 62]:
                self.enterOuterAlt(localctx, 1)
                self.state = 134
                self.expression()
                pass
            elif token in [54]:
                self.enterOuterAlt(localctx, 2)
                self.state = 135
                self.arrayLiteral()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayLiteralContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACK(self):
            return self.getToken(JSSParser.LBRACK, 0)

        def RBRACK(self):
            return self.getToken(JSSParser.RBRACK, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JSSParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(JSSParser.ExpressionContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(JSSParser.COMMA)
            else:
                return self.getToken(JSSParser.COMMA, i)

        def getRuleIndex(self):
            return JSSParser.RULE_arrayLiteral

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArrayLiteral" ):
                listener.enterArrayLiteral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArrayLiteral" ):
                listener.exitArrayLiteral(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrayLiteral" ):
                return visitor.visitArrayLiteral(self)
            else:
                return visitor.visitChildren(self)




    def arrayLiteral(self):

        localctx = JSSParser.ArrayLiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_arrayLiteral)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.match(JSSParser.LBRACK)
            self.state = 147
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 8648161154410185088) != 0):
                self.state = 139
                self.expression()
                self.state = 144
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==57:
                    self.state = 140
                    self.match(JSSParser.COMMA)
                    self.state = 141
                    self.expression()
                    self.state = 146
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 149
            self.match(JSSParser.RBRACK)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def baseType(self):
            return self.getTypedRuleContext(JSSParser.BaseTypeContext,0)


        def arraySuffix(self):
            return self.getTypedRuleContext(JSSParser.ArraySuffixContext,0)


        def getRuleIndex(self):
            return JSSParser.RULE_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType" ):
                listener.enterType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType" ):
                listener.exitType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType" ):
                return visitor.visitType(self)
            else:
                return visitor.visitChildren(self)




    def type_(self):

        localctx = JSSParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self.baseType()
            self.state = 153
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==54:
                self.state = 152
                self.arraySuffix()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BaseTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primitiveType(self):
            return self.getTypedRuleContext(JSSParser.PrimitiveTypeContext,0)


        def ID(self):
            return self.getToken(JSSParser.ID, 0)

        def getRuleIndex(self):
            return JSSParser.RULE_baseType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBaseType" ):
                listener.enterBaseType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBaseType" ):
                listener.exitBaseType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBaseType" ):
                return visitor.visitBaseType(self)
            else:
                return visitor.visitChildren(self)




    def baseType(self):

        localctx = JSSParser.BaseTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_baseType)
        try:
            self.state = 157
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [20, 21, 22, 23]:
                self.enterOuterAlt(localctx, 1)
                self.state = 155
                self.primitiveType()
                pass
            elif token in [62]:
                self.enterOuterAlt(localctx, 2)
                self.state = 156
                self.match(JSSParser.ID)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrimitiveTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT_TYPE(self):
            return self.getToken(JSSParser.INT_TYPE, 0)

        def REAL_TYPE(self):
            return self.getToken(JSSParser.REAL_TYPE, 0)

        def STR_TYPE(self):
            return self.getToken(JSSParser.STR_TYPE, 0)

        def BOOL_TYPE(self):
            return self.getToken(JSSParser.BOOL_TYPE, 0)

        def getRuleIndex(self):
            return JSSParser.RULE_primitiveType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrimitiveType" ):
                listener.enterPrimitiveType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrimitiveType" ):
                listener.exitPrimitiveType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrimitiveType" ):
                return visitor.visitPrimitiveType(self)
            else:
                return visitor.visitChildren(self)




    def primitiveType(self):

        localctx = JSSParser.PrimitiveTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_primitiveType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 15728640) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArraySuffixContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACK(self, i:int=None):
            if i is None:
                return self.getTokens(JSSParser.LBRACK)
            else:
                return self.getToken(JSSParser.LBRACK, i)

        def INT_LITERAL(self, i:int=None):
            if i is None:
                return self.getTokens(JSSParser.INT_LITERAL)
            else:
                return self.getToken(JSSParser.INT_LITERAL, i)

        def RBRACK(self, i:int=None):
            if i is None:
                return self.getTokens(JSSParser.RBRACK)
            else:
                return self.getToken(JSSParser.RBRACK, i)

        def getRuleIndex(self):
            return JSSParser.RULE_arraySuffix

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArraySuffix" ):
                listener.enterArraySuffix(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArraySuffix" ):
                listener.exitArraySuffix(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArraySuffix" ):
                return visitor.visitArraySuffix(self)
            else:
                return visitor.visitChildren(self)




    def arraySuffix(self):

        localctx = JSSParser.ArraySuffixContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_arraySuffix)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 164 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 161
                self.match(JSSParser.LBRACK)
                self.state = 162
                self.match(JSSParser.INT_LITERAL)
                self.state = 163
                self.match(JSSParser.RBRACK)
                self.state = 166 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==54):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(JSSParser.TypeContext,0)


        def VOID(self):
            return self.getToken(JSSParser.VOID, 0)

        def getRuleIndex(self):
            return JSSParser.RULE_returnType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnType" ):
                listener.enterReturnType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnType" ):
                listener.exitReturnType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnType" ):
                return visitor.visitReturnType(self)
            else:
                return visitor.visitChildren(self)




    def returnType(self):

        localctx = JSSParser.ReturnTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_returnType)
        try:
            self.state = 170
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [20, 21, 22, 23, 62]:
                self.enterOuterAlt(localctx, 1)
                self.state = 168
                self.type_()
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 2)
                self.state = 169
                self.match(JSSParser.VOID)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
